# TelegramBOT

./: Dockerfile  README.md  compose.yml  database.py  main.py  note.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/bot/: admin_router.py  create_bot.py  dao.py  kbs.py  models.py  user_router.py  utils.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 43b1a58434ca_initial_revision.py
bot/: Dockerfile  main.py  requirements.txt
